# cortex

./: .gitignore  .golangci.yml  ABSTRACT.md  CHANGELOG.md  CLAUDE.md  CONTEXT_BROKER.md  CONTRIBUTING.md  CORTEX.md  CURRENT_STATUS.md  LICENSE  Makefile  OnContextEvolution.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yaml  eval.md  go.mod  go.sum  requirements-dev.txt  requirements.txt  test_broker_integration.py  tools.json
.claude-plugin/: plugin.json
.claude/commands/: cortex.md
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: eval.yml  release.yml  test.yml
Formula/: cortex.rb
cmd/cortex/: main.go  main_routing_test.go
cmd/cortex-opencode-probe/: main.go
cmd/cortex-or-probe/: main.go
cmd/cortex-pidev-probe/: main.go
cmd/library-eval/: main.go
cmd/loop/: ast_eval_test.go  change.go  change_test.go  discord.go  discord_test.go  edit_test.go  main.go  main_test.go  remove_test.go  render.go  render_test.go  sessions_test.go  stream_test.go  study_eval.go  turn_test.go  wm_live_test.go
cmd/mteb-rerank-smoke/: main.go
context_capture/agents/: __init__.py  synthesis.py
context_capture/cli/: __init__.py  setup_commands.py
context_capture/config/: __init__.py
context_capture/core/: capture.py  processor.py  queue.py
context_capture/providers/: anthropic_provider.py  base.py  router.py
context_capture/utils/: config.py  status.py
docs/: ARCHITECTURE_REVIEW.md  PRE_LAUNCH_CHECKLIST.md  TROUBLESHOOTING.md  abr-fetch-prototype-runner.sh  abr-test-runner.sh  abstract.md  bootstrap-dag-plan.md  codex-assessment.md  coding-harness-runs.md  config-sample.md  context-evolution.md  cortex-study-plan.md  daemon-retirement-plan.md  dag-build-plan.md  dag-protocol.md  dag-traces-stage-3-sample.jsonl  eval-baseline.md  eval-findings-2026-05-10.md  eval-harness-loop.md  eval-harness-phase7-prompt.md  eval-journal.md  eval-prep-epic.md  eval-resume-prompt.md  eval-roadmap.md  eval-strategy.md  eval-suite-codebase-reading.md  eval.md  file-tool-roadmap.md  handoff-2026-05-25.md  handoff-2026-06-12-fleet-study-dag-harness.md  hardening-deferred.md  integration-roadmap.md  intent-execution-split.md  journal-design-log.md  journal-implementation-plan.md  journal.md  learning-harness.md  loop-production-harness.md  new-cortex-design.md  opencode-probe.json  (+28 more)
docs/abr-test-samples/: haiku-cold-trial-1.txt  qwen-cold-trial-1.txt  (+13 more)
legacy-python/: context_broker  context_config  pyproject.toml  setup.py  test_direct.py  test_providers.py  test_router_simple.py
legacy-python/context_capture/: __init__.py  cli.py
legacy-python/context_capture/agents/: audit.py  reflection.py
legacy-python/context_capture/broker/: __init__.py  core.py  injection.py  search.py
legacy-python/context_capture/cli/: broker_commands.py  config_commands.py
legacy-python/context_capture/config/: broker_config.py  provider_config.py
legacy-python/context_capture/core/: processor.py
legacy-python/context_capture/llm/: __init__.py  ollama_client.py
legacy-python/context_capture/providers/: __init__.py  ollama_provider.py
scripts/: build-all.sh  check.sh  install.sh  release.sh  run-all-evals.sh
test/evals/fixtures/rust-weather/: .gitignore  Cargo.toml  README.md
test/evals/fixtures/rust-weather/src/: auth.rs  handlers.rs  main.rs  models.rs  router.rs  storage.rs
test/evals/fixtures/rust-weather/tests/: integration_test.rs
(+1023 files in other folders)
