[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-context-capture"
version = "0.1.0"
description = "Intelligent context capture system for Claude Code using local LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Derek Santos", email = "derek@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Documentation",
    "Topic :: Artificial Intelligence",
]
keywords = ["claude-code", "context-capture", "llm", "ai", "development-tools"]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "rich>=12.0.0",
    "pathlib-mate>=1.0.0",
    "python-dateutil>=2.8.0",
    "watchdog>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "mkdocstrings[python]>=0.19.0",
]

[project.scripts]
context-capture = "context_capture.cli:main"

[project.urls]
Homepage = "https://github.com/dereksantos/agentic-context-capture"
Repository = "https://github.com/dereksantos/agentic-context-capture"
Documentation = "https://github.com/dereksantos/agentic-context-capture/docs"
"Bug Tracker" = "https://github.com/dereksantos/agentic-context-capture/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_capture*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["context_capture"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=context_capture",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "-v",
]
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "slow: marks tests as slow (may take more than a few seconds)",
]