[package]
name = "rust-weather"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"

[dev-dependencies]
hyper = { version = "1.0", features = ["full"] }
